Revert "Feature/users profile and avatar"
